RESOLVED FIXED 241059
Link headers don't support referrerpolicy
https://bugs.webkit.org/show_bug.cgi?id=241059
Summary Link headers don't support referrerpolicy
Noam Rosenthal
Reported 2022-05-28 03:12:32 PDT
Link headers with referrerpolicy should be equivalent to link elements with referrerpolicy. The following WPT has relevant failures: https://github.com/web-platform-tests/wpt/pull/34245 See spec PR: https://github.com/whatwg/html/pull/7961
Attachments
Radar WebKit Bug Importer
Comment 1 2022-06-04 03:13:12 PDT
Charlie Wolfe
Comment 2 2022-07-29 15:59:51 PDT
EWS
Comment 3 2022-10-10 10:47:23 PDT
Committed 255354@main (03cd94f0c94c): <https://commits.webkit.org/255354@main> Reviewed commits have been landed. Closing PR #2867 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.