Link headers don't support referrerpolicy https://bugs.webkit.org/show_bug.cgi?id=241059 <rdar://94384756>

Reviewed by Darin Adler.

Added support for referrer-policy in link headers.
https://github.com/whatwg/html/pull/7961

* Source/WebCore/loader/LinkHeader.cpp:
(WebCore::paramterNameFromString):
(WebCore::LinkHeader::setValue):
* Source/WebCore/loader/LinkHeader.h:
(WebCore::LinkHeader::referrerPolicy const):
* Source/WebCore/loader/LinkLoader.cpp:
(WebCore::LinkLoader::loadLinksFromHeader):
* LayoutTests/imported/w3c/web-platform-tests/preload/preload-referrer-policy-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/preload/preload-referrer-policy.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/preload/resources/echo-referrer.py: Added.
(main):
* LayoutTests/imported/w3c/web-platform-tests/preload/resources/link-header-referrer-policy.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/preload/resources/link-header-referrer-policy.py: Added.
(main):

Canonical link: https://commits.webkit.org/255354@main