Source/WebCore/loader/LinkHeader.h
@@ -45,6 +45,7 @@ public:
     const String& imageSrcSet() const { return m_imageSrcSet; }
     const String& imageSizes() const { return m_imageSizes; }
     const String& nonce() const { return m_nonce; }
+    const String& referrerPolicy() const { return m_referrerPolicy; }
     bool valid() const { return m_isValid; }
     bool isViewportDependent() const { return !media().isEmpty() || !imageSrcSet().isEmpty() || !imageSizes().isEmpty(); }
 
@@ -63,6 +64,7 @@ public:
         LinkParameterImageSrcSet,
         LinkParameterImageSizes,
         LinkParameterNonce,
+        LinkParameterReferrerPolicy,
     };
 
 private:
@@ -77,6 +79,7 @@ private:
     String m_imageSrcSet;
     String m_imageSizes;
     String m_nonce;
+    String m_referrerPolicy;
     bool m_isValid { true };
 };
 
